<resources>
    <string name="app_name">Friends Remember</string>
    <string name="image">Image</string>
    <string name="tambah_data">Tambah Data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="tgl_lahir">Tgl Lahir</string>
    <string name="gender">Gender</string>
    <string name="nama">Nama</string>
    <string name="profil">Profil</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nama_panggilan">Nama Panggilan</string>
    <string name="no_hp">No Hp</string>
    <string name="alamat">Alamat</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="man">Pria</string>
    <string name="woman">Wanita</string>
    <string name="phonenumber">No Handphone</string>
    <string name="email">Email</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="call">Hubungi</string>
    <string name="new_contact">new_contact</string>
    <string name="Woman">Wanita</string>
    <string name="Man">Pria</string>
    <string name="loading_error">Loading Error</string>
    <string name="cannot_be_empty">Tidak Boleh Kosong!</string>
    <string name="choice_only_one">Pilih Salah Satu</string>
    <string name="contact_added">Kontak Ditambahkan</string>
    <string name="premissions_to_call">Izin untuk melakukan panggilan!</string>
    <string name="nothing_found">Tidak Ditemukan</string>
    <string name="search">search</string>
</resources>